--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-  ,
-  "proxy" : "localhost:8080"
+  },
+  "proxy": "localhost:8080"
 }
